// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link スナップショット Default 1`] = `
<body>
  <div>
    <a
      class="Link_linkStyle__m4v9430"
      href="#"
    >
      Default Link
    </a>
  </div>
</body>
`;

exports[`Link スナップショット Variants 1`] = `
<body>
  <div>
    <div>
      <a
        class="Link_linkStyle__m4v9430 Link_linkStyle_colored_true__m4v9431"
        href="#"
      >
        Colored Link
      </a>
    </div>
    <div>
      <a
        class="Link_linkStyle__m4v9430 Link_linkStyle_underlined_true__m4v9432"
        href="#"
      >
        Underlined Link
      </a>
    </div>
    <div>
      <a
        class="Link_linkStyle__m4v9430 Link_linkStyle_noHovered_true__m4v9433"
        href="#"
      >
        no hovered Link
      </a>
    </div>
    <div>
      <a
        class="Link_linkStyle__m4v9430 Link_linkStyle_display_block__m4v9434"
        href="#"
      >
        <div
          style="border: 1px solid #3063d4; border-radius: 8px;"
        >
          Block Link
        </div>
      </a>
    </div>
  </div>
</body>
`;
